# studygit

./: 0001-Debian-test-for-dosfstools-package.patch  hello.txt  readme.txt  sample.txt  sample_key.txt
Fath-commit/: 0001-Debian-test-for-bash-package.patch  0001-Debian-test-for-dosfstools-package.patch  Add-bash-test-case-for-debian-tests.patch  Add-bdfresize-test-case-for-debian-tests.patch  Add-dosfstools-test-case-for-debian-tests.patch  Add-expat-test-case-for-debian-tests.patch  Add-logrotate-test-case-for-debian-tests.patch  Add-lzop-test-case-for-debian-tests.patch  Add-sed-test-case-for-debian-tests.patch  Add-strace-test-case-for-debian-tests.patch  Add-wget-test-case-for-debian-tests.patch
Fath-commit/aaphoto/: Add-aaphoto-test-case-for-debian-tests.patch
Fath-commit/acl/: Add-acl-test-case-for-debian-tests.patch
Fath-commit/asciiart/: Add-asciiart-test-case-for-debian-tests.patch
Fath-commit/at/: Add-at-test-case-for-debian-tests.patch
Fath-commit/attr/: Add-attr-test-case-for-debian-tests.patch
Fath-commit/bc/: Add-bc-test-case-for-debian-tests.patch
Fath-commit/bind9/: Add-bind9-test-case-for-debian-tests.patch
Fath-commit/binfmt-support/: Add-binfmt-support-test-case-for-debian-tests.patch
Fath-commit/bison/: Add-bison-test-case-for-debian-tests.patch
Fath-commit/bonnie++/: Add-bonnie++-test-case-for-debian-tests.patch
Fath-commit/bzip2/: Add-bzip2-test-case-for-debian-tests.patch
Fath-commit/cpio/: Add-cpio-test-case-for-debian-tests.patch
Fath-commit/cracklib-runtime/: Add-cracklib-runtime-test-case-for-debian-tests.patch
Fath-commit/cron/: Add-cron-test-case-for-debian-tests.patch
Fath-commit/csh/: Add-csh-test-case-for-debian-tests.patch
Fath-commit/dcfldd/: Add-dcfldd-test-case-for-debian-tests.patch
Fath-commit/diffutils/: Add-diffutils-test-case-for-debian-tests.patch
Fath-commit/dnsmasq/: Add-dnsmasq-test-case-for-debian-tests.patch
Fath-commit/dpkg/: Add-dpkg-test-case-for-debian-tests.patch
Fath-commit/ed/: Add-ed-test-case-for-debian-tests.patch
Fath-commit/ethtool/: Add-ethtool-test-case-for-debian-tests.patch
Fath-commit/fam/: Add-fam-test-case-for-debian-tests.patch
Fath-commit/file/: Add-file-test-case-for-debian-tests.patch
Fath-commit/findutils/: Add-findutils-test-case-for-debian-tests.patch
Fath-commit/flex/: Add-flex-test-case-for-debian-tests.patch
Fath-commit/gawk/: Add-gawk-test-case-for-debian-tests.patch
Fath-commit/gettext/: Add-gettext-test-case-for-debian-tests.patch
Fath-commit/guile-2.0/: Add-guile-2.0-test-case-for-debian-tests.patch
Fath-commit/gzip/: Add-gzip-test-case-for-debian-tests.patch
Fath-commit/htop/: Add-htop-test-case-for-debian-test.patch
Fath-commit/kmod/: Add-kmod-test-case-for-debian-tests.patch
Fath-commit/less/: Add-less-test-case-for-debian-tests.patch
Fath-commit/lsof/: Add-lsof-test-case-for-debian-test.patch
Fath-commit/passwdqc/: Add-passwdqc-for-debian-test.patch
Fath-commit/rdist/: Add-rdist-test-case-for-debian-tests.patch
Fath-commit/tar/: Add-tar-test-case-for-debian-tests.patch
Fath-commit/whichman/: Add-whichman-test-case-for-debian-tests.patch
Fath-commit/xinetd/: Add-xinetd-test-case-for-debian-test.patch
Git/: Cross compile.pptx  Git-Slide-Trungntcmc.pptx  Git.pptx  demo01.sh  git_slide.ppt
Path/: 0001-Debian-test-for-bdfresize-package.patch  0001-Debian-test-for-guile-2.0-package.patch
Test-Git/: test.txt
Test-Scrip/bdfresize/: bdfresize.sh  bdfresize.sh.save
Test-Scrip/binfmt-support/: binfmt-support.sh
Test-Scrip/crash/: crash.sh
Test-Scrip/dnsmasq/: dnsmasq.sh
Test-Scrip/dosfstools/: dosfstools.sh
Test-Scrip/genisoimage/: devdump.sh  dirsplit.sh  genisoimage.sh  geteltorito.sh  isodump.sh  isoinfo.sh  isovfy.sh  mkzftree.sh
Test-Scrip/guile-2.0/: guile-2.0.sh
Test-Scrip/mcelog/: mcelog.sh
indicator/indicator/: CHANGES  Makefile.am  configure.ac
indicator/indicator/glade/: main.glade
indicator/indicator/include/: battery.h  ctrlpanel.h  monitor.h  touchpad.h  url.h
indicator/indicator/src/: Makefile.am  battery.c  brightness.c  indicator.c  network.c
recipes-tzcs/acs-smart-card-middleware/: acs-smart-card-middleware_4.5-0.bb
recipes-tzcs/acs-smart-card-reader-driver/: acs-smart-card-reader-driver_1.1.3.bb
recipes-tzcs/altair-le-touchdriver/: altair-le-touchdriver_1.0.bb
recipes-tzcs/auto-test/: auto-test_1.0.bb
recipes-tzcs/batteryalarm/: batteryalarm.bb  batteryalarm.bb.save
recipes-tzcs/controlpanel/: controlpanel_1.0.bb
recipes-tzcs/eula/: eula_0.1.bb
recipes-tzcs/fbv/: fbv_1.0b.bbappend
recipes-tzcs/fhandler/: fhandler_0.1.bb
recipes-tzcs/firefox/: firefox_52.8.0esr.bb
recipes-tzcs/gmp/: gmp_debian.bbappend
recipes-tzcs/gtkpopup/: gtkpopup_0.1.bb
recipes-tzcs/icewm/: icewm_1.3.12.bb
recipes-tzcs/indicator/: indicator_2.1.bb
recipes-tzcs/init-files/: init-files_1.0.bb
recipes-tzcs/libpolicy/: libpolicy.bb
recipes-tzcs/libtzcs-security/: libtzcs-security.bb
recipes-tzcs/loading-animation/: loading-animation_0.1.bb
recipes-tzcs/ntp/: ntp_debian.bb
recipes-tzcs/openconnect/: openconnect_7.06.bb
recipes-tzcs/opensc/: opensc_0.14.0.bb
(+132 files in other folders)
